<?xml version="1.0"?>
<package format="2">
  <name>rrt_star_global_planner</name>
  <version>0.0.0</version>
  <description>The rrt_star_global_planner ros package</description>

  <maintainer email="akashleena.s@newspace.co.in">akashleena</maintainer>


  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend> 
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>nav_core</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <depend>angles</depend>
  <depend>base_local_planner</depend>
  <depend>costmap_2d</depend>
  <depend>std_msgs</depend>
  <depend>eigen</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <exec_depend>nav_core</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
   <nav_core plugin="${prefix}/rrt_star_global_planner_ros_plugin.xml"/>

  </export>
</package>